fixtures/external/negative/kernel-host-lifecycle-internal-import/smoke.ts
// Negative fixture: the workspace-private friend subpath is stripped from
// packed public @mog-sdk/kernel artifacts.
import { DocumentLifecycleSystem } from '@mog-sdk/kernel/host-lifecycle-internal';

void DocumentLifecycleSystem;
